# wallpaper-changer-rs

./: .gitignore  Cargo.toml  README.md  clippy.toml  make_docs.py
.github/workflows/: build.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: build.rs  config.rs  image_list.rs  image_structs.rs  main.rs  paths.rs
src/add_scheduled_task/: linux.rs
src/set_background/: linux.rs  windows.rs
wallpaper_changer/: Cargo.toml
wallpaper_changer/src/: build.rs  config.rs  date_format.rs  image_list.rs  image_structs.rs  images.rs  main.rs  screen_size.rs
wallpaper_changer/src/add_scheduled_task/: linux.rs  mod.rs  windows.rs
wallpaper_changer/src/set_background/: linux.rs  mod.rs
