[workspace]
members = ["macros", "wallpaper_changer"]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
absolute_paths = "warn"
allow_attributes = "warn"
min_ident_chars = "warn"
non_ascii_idents = "warn"
renamed_function_params = "warn"
semicolon_if_nothing_returned = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
missing_crate_level_docs = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
