[package]
name = "wallpaper_changer"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[dependencies]
ab_glyph = { version = "0.2.29", default-features = false }
chrono = { version = "0.4.40", features = ["serde"] }
compile-dotenv = "0.1.0"
dirs = "6.0.0"
env_logger = "0.11.7"
ftail = "0.2.1"
# Disable IDNA
idna_adapter = "=1.0.0"
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.25.0", default-features = false }
log = "0.4"
log-panics = "2.1.0"
multi_log = "0.1.2"
rusttype = "0.9.3"
rand = { version = "0.9.0", default-features = false, features = ["thread_rng"] }
screen_size = "0.1.0"
sentry = { version = "0.36.0", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "ureq"] }
sentry-log = "0.36.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.140"
toml = { version = "0.8.20", default-features = false, features = ["parse"] }
ureq = { version = "3", features = ["brotli"] }
url = "2.5.4"

[build-dependencies]
ureq = { version = "3", features = ["brotli"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
absolute_paths = "warn"
allow_attributes = "warn"
min_ident_chars = "warn"
non_ascii_idents = "warn"
renamed_function_params = "warn"
semicolon_if_nothing_returned = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_self = "warn"

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
missing_crate_level_docs = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
